<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.conceptappsworld.wellbeing.fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_less">

        <RelativeLayout
            android:id="@+id/rl_profile_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/icon_size_70"
                android:layout_height="@dimen/icon_size_70"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_less"
                android:layout_marginStart="@dimen/margin_less"
                android:layout_toEndOf="@+id/iv_profile"
                android:layout_toRightOf="@+id/iv_profile"
                android:text="@string/name"
                android:textSize="@dimen/text_size_general" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginLeft="@dimen/margin_less"
                android:layout_marginStart="@dimen/margin_less"
                android:layout_toEndOf="@+id/iv_profile"
                android:layout_toRightOf="@+id/iv_profile"
                android:text="@string/prompt_email"
                android:textSize="@dimen/text_size_general" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email"
                android:layout_marginLeft="@dimen/margin_less"
                android:layout_marginStart="@dimen/margin_less"
                android:layout_toEndOf="@+id/iv_profile"
                android:layout_toRightOf="@+id/iv_profile"
                android:text="@string/mobile"
                android:textSize="@dimen/text_size_general" />

            <TextView
                android:id="@+id/tv_town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mobile"
                android:layout_marginLeft="@dimen/margin_less"
                android:layout_marginStart="@dimen/margin_less"
                android:layout_toEndOf="@+id/iv_profile"
                android:layout_toRightOf="@+id/iv_profile"
                android:text="@string/town"
                android:textSize="@dimen/text_size_general" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_below="@+id/rl_profile_basic"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />
        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible"
            android:layout_below="@+id/rl_profile_basic"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_profile_basic" />

    </RelativeLayout>

</FrameLayout>
