<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal"
    android:weightSum="5"
    >

    <LinearLayout
        android:id="@+id/ll_like_fav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/header_footer_padding"
        android:paddingBottom="@dimen/header_footer_padding">

        <ImageView
            android:id="@+id/iv_like_fav"
            android:layout_width="@dimen/nav_icon_w"
            android:layout_height="@dimen/nav_icon_w"
            android:src="@drawable/like_selector" />

        <TextView
            android:id="@+id/tv_like_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_fav"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ideas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/header_footer_padding"
        android:paddingBottom="@dimen/header_footer_padding">

        <ImageView
            android:id="@+id/iv_ideas"
            android:layout_width="@dimen/nav_icon_w"
            android:layout_height="@dimen/nav_icon_w"
            android:src="@drawable/ideas_selector" />

        <TextView
            android:id="@+id/tv_ideas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ideas"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/header_footer_padding"
        android:paddingBottom="@dimen/header_footer_padding">

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/nav_icon_w"
            android:layout_height="@dimen/nav_icon_w"
            android:src="@drawable/share_selector" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/header_footer_padding"
        android:paddingBottom="@dimen/header_footer_padding">

        <ImageView
            android:id="@+id/iv_todo"
            android:layout_width="@dimen/nav_icon_w"
            android:layout_height="@dimen/nav_icon_w"
            android:src="@drawable/todo_selector" />

        <TextView
            android:id="@+id/tv_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_txt_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_inspire_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/header_footer_padding"
        android:paddingBottom="@dimen/header_footer_padding">

        <ImageView
            android:id="@+id/iv_inspire_me"
            android:layout_width="@dimen/nav_icon_w"
            android:layout_height="@dimen/nav_icon_w"
            android:src="@drawable/inspire_me_selector" />

        <TextView
            android:id="@+id/tv_inspire_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspire_me"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_txt_size" />
    </LinearLayout>
</LinearLayout>