<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal"
    android:background="@color/color_on_bg_with">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_pwd"
            android:textColor="@color/color_on_bg"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_on_bg_with"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/dlg_forgot_et_w"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_very_less"
                    android:textColorHint="@color/color_on_bg">

                    <EditText
                        android:id="@+id/et_email_forgot"
                        android:layout_width="@dimen/dlg_forgot_et_w"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:textColor="@color/color_on_bg"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/margin_normal"
                        android:paddingTop="@dimen/margin_normal"
                        />

                </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tv_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/used_registeration"
                android:textColor="@color/color_on_bg"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/ll_cancel_submit"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_orange_selector"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:text="@string/cancel"
            android:textColor="@color/color_on_bg_with"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"/>

        <ProgressBar
            android:id="@+id/forgot_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/btn_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_normal"
                android:text="@string/submit"
                android:textColor="@color/color_on_bg_with"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
