<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_custom"
    android:paddingLeft="@dimen/activity_horizontal_margin_custom"
    android:paddingRight="@dimen/activity_horizontal_margin_custom"
    android:paddingTop="@dimen/activity_vertical_margin_custom"
    tools:context="com.conceptappsworld.wellbeing.SplashActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_high_more"
                    android:layout_marginBottom="120dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to"
                        android:textColor="@color/color_on_bg"
                        android:textSize="@dimen/text_size_lil_big"
                        android:gravity="center"
                        android:layout_marginTop="0dp"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/color_on_bg"
                        android:textSize="@dimen/text_size_more_big"
                        android:gravity="center"
                        android:layout_marginTop="0dp"
                        android:id="@+id/textView2"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wellbeing_tagline"
                        android:textColor="@color/color_on_bg"
                        android:textSize="@dimen/text_size_lil_big"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin_normal"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_60"
                        android:layout_marginLeft="@dimen/margin_60"
                        android:layout_marginRight="@dimen/margin_60"
                        android:layout_marginStart="@dimen/margin_60"
                        android:background="@drawable/btn_trans_selector"
                        android:gravity="center"
                        android:paddingBottom="@dimen/margin_medium"
                        android:paddingTop="@dimen/margin_medium"
                        android:text="@string/signin"
                        android:textColor="@color/color_on_bg"
                        android:textSize="@dimen/text_size_general" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal">


                        <!--<com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="@dimen/margin_60"
                            android:layout_marginLeft="@dimen/margin_60"
                            android:layout_marginRight="@dimen/margin_60"
                            android:layout_marginStart="@dimen/margin_60"
                            style="@style/FacebookLoginButton"
                            android:gravity="center"
                            android:paddingBottom="@dimen/margin_normal"
                            android:paddingTop="@dimen/margin_normal"
                            />-->

                        <ProgressBar
                            android:id="@+id/social_login_progress"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="visible"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            />

                        <TextView
                            android:id="@+id/tv_fb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_60"
                            android:layout_marginLeft="@dimen/margin_60"
                            android:layout_marginRight="@dimen/margin_60"
                            android:layout_marginStart="@dimen/margin_60"
                            android:background="@drawable/btn_blue_selector"
                            android:gravity="center"
                            android:paddingBottom="@dimen/margin_medium"
                            android:paddingTop="@dimen/margin_medium"
                            android:text="@string/signin_fb"
                            android:textColor="@color/color_on_bg_with"
                            android:textSize="@dimen/text_size_general" />

                        <ImageView
                            android:id="@+id/iv_fb"
                            android:layout_width="@dimen/icon_size_less"
                            android:layout_height="@dimen/icon_size_less"
                            android:layout_alignLeft="@+id/tv_fb"
                            android:layout_alignStart="@+id/tv_fb"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="9dp"
                            android:layout_marginStart="9dp"
                            android:src="@drawable/fb" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal">

                        <!--<com.google.android.gms.common.SignInButton
                            android:id="@+id/btn_sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_very_much"
                            android:layout_marginLeft="@dimen/margin_very_much"
                            android:layout_marginRight="@dimen/margin_very_much"
                            android:layout_marginStart="@dimen/margin_very_much"
                            android:gravity="center"
                            android:paddingBottom="@dimen/margin_normal"
                            android:paddingTop="@dimen/margin_normal"/>-->

                        <TextView
                            android:id="@+id/tv_google"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_60"
                            android:layout_marginLeft="@dimen/margin_60"
                            android:layout_marginRight="@dimen/margin_60"
                            android:layout_marginStart="@dimen/margin_60"
                            android:background="@drawable/btn_blue_selector"
                            android:gravity="center"
                            android:paddingBottom="@dimen/margin_medium"
                            android:paddingTop="@dimen/margin_medium"
                            android:text="@string/signin_google"
                            android:textColor="@color/color_on_bg_with"
                            android:textSize="@dimen/text_size_general" />

                        <ImageView
                            android:id="@+id/iv_google"
                            android:layout_width="@dimen/icon_size_less"
                            android:layout_height="@dimen/icon_size_less"
                            android:layout_alignLeft="@+id/tv_google"
                            android:layout_alignStart="@+id/tv_google"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="9dp"
                            android:layout_marginStart="9dp"
                            android:src="@drawable/google_plus" />

                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</RelativeLayout>
